# verysmolcode

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
scripts/: pre-commit
src/: config.rs  lib.rs  main.rs  utils.rs
src/agent/: loop_runner.rs  mod.rs
src/api/: client.rs  mod.rs  models.rs  types.rs
src/mcp/: client.rs  config.rs  types.rs
src/telegram/: bot.rs  config.rs
src/tools/: file_ops.rs  git.rs  grep.rs  mod.rs  registry.rs  todo.rs  undo.rs  web.rs
src/tui/: app.rs  commands.rs  input.rs  mod.rs  session.rs  ui.rs
tests/: integration_test.sh  test_agent.rs  test_api.rs  test_commands.rs  test_config.rs  test_mcp.rs  test_registry.rs  test_tools.rs  test_vibecoded_app.py
