[package]
name = "verysmolcode"
version = "0.7.0"
edition = "2021"
description = "A lightweight TUI coding assistant using Gemini API free tier"
license = "MIT"

[lib]
name = "verysmolcode"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vsc"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
textwrap = "0.16"
unicode-width = "0.2"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
